--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 anyhow = "1.0.51"
 argh = "0.1.7"
 camino = "1.0.5"
+command-run = "1.1.1"
 comrak = "0.12.1"
 fs-err = "2.6.0"
 tera = "1.15.0"
