--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,4 +18,5 @@ jobs:
           override: true
       - uses: actions-rs/cargo@v1
         with:
-          command: run --publish
+          command: run
+          args: -- --publish
