--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -7,7 +7,7 @@ name: Publish
 
 jobs:
   check:
-    name: Check
+    name: Publish
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
