--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,7 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
+      - uses: Swatinem/rust-cache@d12701459954fec471b2d34cdf7ea3374b026383
       - uses: actions-rs/cargo@v1
         with:
           command: check
@@ -33,6 +34,7 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
+      - uses: Swatinem/rust-cache@d12701459954fec471b2d34cdf7ea3374b026383
       - uses: actions-rs/cargo@v1
         with:
           command: test
@@ -48,6 +50,7 @@ jobs:
           toolchain: stable
           override: true
       - run: rustup component add rustfmt
+      - uses: Swatinem/rust-cache@d12701459954fec471b2d34cdf7ea3374b026383
       - uses: actions-rs/cargo@v1
         with:
           command: fmt
@@ -64,6 +67,7 @@ jobs:
           toolchain: stable
           override: true
       - run: rustup component add clippy
+      - uses: Swatinem/rust-cache@d12701459954fec471b2d34cdf7ea3374b026383
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
