Publish in release mode
This change is in preparation for adding automatic thumbnail generation,
which I figure might benefit from optimization.

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,6 +24,6 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: run
-          args: -- --publish
+          args: --release -- --publish
         env:
           GH_TOKEN: ${{ secrets.TOKEN }}
