--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,7 @@ jobs:
     name: Check
     runs-on: ubuntu-latest
     steps:
+      - run: sudo apt-get install -y lld
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
@@ -28,6 +29,7 @@ jobs:
     name: Test Suite
     runs-on: ubuntu-latest
     steps:
+      - run: sudo apt-get install -y lld
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
@@ -60,6 +62,7 @@ jobs:
     name: Clippy
     runs-on: ubuntu-latest
     steps:
+      - run: sudo apt-get install -y lld
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
