--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,6 +10,7 @@ jobs:
     name: Publish
     runs-on: ubuntu-latest
     steps:
+      - run: sudo apt-get install -y lld
       - uses: actions/checkout@v2
         with:
           # This does a full clone instead of a shallow clone, which is
