--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,5 @@ fs-err = "2.7.0"
 image = { version = "0.24.2", default-features = false, features = ["jpeg"] }
 serde = { version = "1.0.137", features = ["derive"] }
 tera = "1.15.0"
-time = "0.3.9"
+time = { version = "0.3.9", features = ["parsing"] }
 walkdir = "2.3.2"
