--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,16 @@ edition = "2021"
 publish = false
 
 [dependencies]
-anyhow = "1.0.58"
-argh = "0.1.8"
-camino = "1.0.9"
+anyhow = "1.0.75"
+argh = "0.1.12"
+camino = "1.1.6"
 command-run = "1.1.1"
-comrak = "0.13.1"
-fs-err = "2.7.0"
-image = { version = "0.24.2", default-features = false, features = ["jpeg"] }
-rayon = "1.5.3"
-rss = "2.0.1"
-serde = { version = "1.0.138", features = ["derive"] }
-tera = "1.16.0"
-time = { version = "0.3.11", features = ["parsing"] }
-walkdir = "2.3.2"
+comrak = "0.18.0"
+fs-err = "2.9.0"
+image = { version = "0.24.7", default-features = false, features = ["jpeg"] }
+rayon = "1.7.0"
+rss = "2.0.6"
+serde = { version = "1.0.188", features = ["derive"] }
+tera = "1.19.0"
+time = { version = "0.3.28", features = ["formatting", "parsing"] }
+walkdir = "2.3.3"
